--- a/resume2.html
+++ b/resume2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head
   <title>方方的个人简历</title>
-  <link rel="stylesheet" href="./a.css">
+  <link rel="stylesheet" href="./resume2.css">
   <script src="//at.alicdn.com/t/font_451045_32zbfqegtq3t0529.js"></script>
   <style type="text/css">
     .icon {
