--- a/resume2.html
+++ b/resume2.html
@@ -4,7 +4,7 @@
 <head
   <title>方方的个人简历</title>
   <link rel="stylesheet" href="./resume2.css">
-  <script src="https://fangyinghang.com/resume-15-2/img/rs-cover.jpgs"></script>
+  <script src="https://fangyinghang.com/resume-15-2/img/rs-cover.jpg"></script>
   <style type="text/css">
     .icon {
        width: 1em; height: 1em;
