--- a/resume2.html
+++ b/resume2.html
@@ -50,13 +50,14 @@
     </div>
   </div>
   <div class="banner">
+     <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
     <div class="mask"></div>
   </div>
   <main>
     <div class="userCard">
       <div class="pictureAndText clearfix">
         <div class="picture">
-          <img src="https://fangyinghang.com/resume-15-2/img/avatar.jpg" width=299 height=347 alt="头像">
+          <img src="https://fangyinghang.com/resume-15-2/img/rs-cover.jpg"  height=515 >
         </div>
         <div class="text">
           <span class="welcome">Hello
