--- a/resume1.html
+++ b/resume1.html
@@ -1,6 +1,6 @@
 <html><head>
   <title>方方的个人简历</title>
-  <link rel="stylesheet" href="./a.css">
+  <link rel="stylesheet" href="./resume1.css">
 </head>
 
 <body>
