--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
     <div class="userCard">
       <div class="pictureAndText clearfix">
         <div class="picture">
-          <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
+          <img src="./img/avatar.jpg" width=216 height=288 alt="头像">
         </div>
         <div class="text">
           <span class="welcome">Hello
             <span class="triangle"></span>
           </span>
-          <h1>方应杭</h1>
-          <p>前端开发工程师</p>
+          <h1>王晓萌</h1>
+          <p>大学本科在读</p>
           <hr>
           <dl>
             <dt>年龄</dt>
-            <dd>18</dd>
+            <dd>21</dd>
             <dt>所在城市</dt>
-            <dd>北京</dd>
+            <dd>烟台</dd>
             <dt>邮箱</dt>
-            <dd>fangyinghang@foxmail.com</dd>
+            <dd>610132440@qq.com</dd>
             <dt>手机</dt>
-            <dd>13812345678</dd>
+            <dd>17812345678</dd>
           </dl>
         </div>
       </div>
@@ -102,8 +102,7 @@
     </p>
 
     <p class="selfIntroduction">
-      方应杭， 资深前端工程师，资深前端讲师，现在在 饥人谷 教前端课程。
-      <br> 技能：前端开发，Rails 开发，Node.js 开发
+    王晓萌，大学本科在读。为成为一名合格的前端开发工程师而努力。
     </p>
 
   </main>
