--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
 
     <div class="works" style="height: 597px;">
       <div class="big" style="top: 0; left: 0;">
-        <img src="./img/1.jpg" alt="作品1" width：606 width:597>
+        <img src="./img/1.jpg" alt="作品1" width="540" height="720">
       </div>
       <div class="small" style="top: 0; left: 645px;">
-        <img src="./img/2.jpg" alt="作品2" width：293 width:285>
+        <img src="./img/2.jpg" alt="作品2" height="320">
       </div>
       <div class="small" style="top: 312px; left: 645px;">
-        <img src="./img/3.jpg" alt="作品3" width：293 width:285>
+        <img src="./img/3.jpg" alt="作品3" height="320">
       </div>
     </div>
 
